index.css
/* T O C
 Presets
 Variablized Styles
 Element Styles
 Mobile
 Header and Nav
 Sections
 Media Queries
 */


/* Presets */
* {
  box-sizing: border-box;
}

html, body {
  margin: 0;

  background: #fafafa;
  background-color: rgba(0,0,0,0.8);
  color: rgba(28,28,28,0.9);

  font-family: 'Lato', sans-serif;
  font-size: 13px;

  text-align: center;

  box-sizing: border-box;
}

body {
  padding: 0 0px;
}

h1, h2, h3 {
  font-family: 'Cormorant Garamond', sans-serif;
  font-weight: 900;
  text-transform: capitalize;
}

b {
  font-weight: 400;
}

p a, li a, .caption a {
  display: inline-block;
  margin-top: -3px;
}

/* Variablized STyles */

.hidden {
  display: none !important;
}

/* Body */

nav {
  font-family: oswald;
  font-weight: 400;
  font-style: normal;
  font-size: 12px;
  letter-spacing: .08em;
  text-transform: uppercase;
}

a {
  text-decoration: none;
  pointer-events: all;
  cursor: pointer;
  vertical-align: middle;
}

button {
  pointer-events: all;
  cursor: pointer;
}

nav a {
  margin: 0 1em;
  padding: .618em 0;
  color: #aaa;
  display: inline-block;
  vertical-align: middle;
  text-decoration: none;
  background-color: transparent;
  text-transform: capitalize;
  font-size: 1rem;
  font-family: lato;
}

.top-left, .top-right {
 width: 400px;
}

.top-left {
 display: flex;
 justify-content: flex-start;
 padding-left: 50px;
}

.top-right {
 display: flex;
 justify-content: flex-end;
 padding-right: 50px;
}

.top-center {
  width: 300px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.top-center a {
  font-family: roboto slab;
  font-weight: 600;
  font-style: normal;
  font-size: 28px;
  letter-spacing: .15em;
  line-height: 1em;
  color: #eee;
}

.top-center div a {
  color: #eee;
  margin: 5px 0;
  font-weight: 100;
  font-size: 13px;
  font-family: lato, sans-serif;
  font-style: normal;
  letter-spacing: normal;
}

.mobile {
  display: none;
}

.header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 1500px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 50px;
  padding-bottom: 50px;
}

.site {
 width: 100vw;
 overflow: hidden;
}

.video-banner, .tagline-banner {
  width: 100%;
}

.video-banner {
  position: relative;
  height: 325px;
  width: 100%;
  max-width: 1000px; /* TODO: add media queries for this */
  margin: 0 auto;
  overflow: hidden;
}

.video-container {
  position: absolute;
  top: -100px;
  left: -70px;
  width: 1000px;
  height: 1000px;
}

iframe, .vjs-poster, .html6-video-player {
  position: absolute;
  top: -25% !important;
  left: -65% !important;

  width: 330% !important;
  height: 95% !important;

  object-fit: cover;
}

.video-container video {
  position: absolute;
  top: 0 !important;
  left: 0 !important;

  width: 100%;
  height: 450px;
  /* height: auto; */

  object-fit: cover;
}

.video-js {
  height: 100%;
}

.tagline-banner {
  padding: 50px 0px;
}

.tagline {
  color: #aaa;
  font-family: lato;
  font-weight: 400;
  font-style: normal;
  font-size: 22px;
  letter-spacing: -.01em;
  line-height: 1em;
  text-transform: none;
}

.social-links {
  display: flex;
  justify-content: center;
  padding-bottom: 50px;
}

.socials {
  margin-right: 1em;
}

.socials a {
  padding: 0.5em;
}

.twitter-follow-button {
  opacity: 0.9;
}

.twitter-follow-button:hover {
  opacity: 0.5;
}

.scholar-follow-button {
  opacity: 0.9;
}

.scholar-follow-button:hover {
  opacity: 0.5;
}

.cv-button {
  opacity: 0.9;
}

.cv-button:hover {
  opacity: 0.5;
}

/* Gallery */

.gallery-page {
  padding: 0 2rem 2rem;
}

.gallery-page h1 {
  text-align: left;
  font-weight: 400;
  color: #fafafa;
}

.gallery-container {
  display: flex;
  flex-direction: column;
}

.gallery-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: flex-start;
  margin: 1rem 0;
}

.gallery-entry {
  flex-basis: 29%;
  height: 100%;
  display: flex;
  flex-direction: column;

}

.gallery-image-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 300px;
  height: 300px;
  overflow: hidden;
}

.gallery-image-container img {
  min-height: 100%;
  min-width: 100%;
  max-width: 115%;
  height: auto;
  object-fit: cover;
}


.gallery-caption {
  color: #fafafa;
  padding: 1rem 0;
  font-weight: 300;
}

/* Mobile Styles */
.mobile-header {
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding: 3%;
}

.mobile-overlay-nav {
  display: none;
}

.mobile-nav {
  position: relative;
}

.mobile-nav:hover .mobile-overlay-nav {
  display: flex;
}

.mobile-overlay-nav {
  position: absolute;
  top: 100%;
  left: 0;
  flex-direction: column;
  background: #fff;
  text-align: left;
  padding: 0 5px 5px;
  box-shadow: rgba(0,0,0,0.172549) 0 6px 12px 0;
  z-index: 10;
}

/* Media Queries */

/* Styles Applicable until Mobile Size Exceeded */
@media (max-width: 425px) {
  .mobile {
    display: flex;
  }

  header {
    display: none;
  }

  .tagline-banner {
    padding: 7% 0;
    font-size: 18px;
  }
}

/* Styles Applicable Between mobile and tablet sizes */
@media (min-width: 425px + 1px) and (max-width: 767px) {
  .mobile {
    display: flex;
  }

  header {
    display: none;
  }
}
/* Styles Applicable Beginning at Deskop Size */
@media (min-width: 768px) {
  .header-container {
    padding: 1.5rem 0;
  }

  nav a {
    font-size: 0.8rem;
  }
}
/* Styles Applicable Beginning at Large Screen Size */
@media (min-width: 1920px) {

}


/* Research Page */

.research-page-container .site {
  width: auto;
}

.research-page {
  position: relative;
  overflow-y: scroll;
}

.research-page h1, .research-page p {
  text-align: left;
}

@media (min-width: 425px) {
  .research-page-container .color-banner {
    height: 600vh;
  }
}
}

@media (min-width: 768px) {
  .research-page-container .color-banner {
    height: 280vh;
  }
}

.research-page-container .color-banner {
  height: 220vh;
}

.research-container {
  width: 90%;
  box-sizing: border-box;
  overflow-y: scroll;
  margin: 0 50px;
}

.research-content {
  padding: 50px;
}

.entry-container .title {
  color: #777777;

}

.footnote i {
  font-size: 0.8rem;
  font-weight: 400;
  font-style: italic;
}

.line-3 {
  font-size: 0.9rem;
  padding-top: 5px;
}
.line-4 {
  font-size: 0.9rem;
}

.left {
  float: left;
}

.left .image-container {
  margin: 30px 25px 5px 0px;
}

.left img {
  height: 255px;
  width: auto;
}

.left .caption {
  text-align: center;
  margin: 0 auto;
}

.right {
  float: right;
}

.right .image-container {
  margin: 20px 20px 15px 15px;
}

.right img {
  height: 255px;
  width: auto;
}

.right .caption {
  text-align: center;
  margin: 0 auto;
}

.clearfix {
  content: "";
  clear: both;
  display: table;
}


/* About Page */

.about-page {
  position: relative;
  overflow-y: scroll;
}

.about-page h1, .about-page p, .about-page li {
  text-align: left;
}

.about-container {
  box-sizing: border-box;
  overflow-y: scroll;
  margin: 0 50px;
}

.color-banner {
  position: absolute;
  background: #fafafa;
  content: " ";
  width: 100vw;
  height: 110vh;
  top: 15%;
  right: 0;
}

.about-content {
  z-index: 1;
  background: #fafafa;
  padding: 70px;
}

.left {
  float: left;
}

.left img {
  height: 295px;
  width: auto;
}

.left .caption {
  text-align: center;
  margin: 0 auto;
}

.clearfix {
  content: "";
  clear: both;
  display: table;
}

.caption {
  font-style: italic;
  font-weight: 100;
}

.academic-history {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.academic-history li {
  margin-bottom: 10px;
  margin-top: 8px
}

  .about-container {
      margin: 35px 10px 0;
  }

  .clearfix {
    display: inherit;
  }

  .left {
    float: left;
  }

  .image-container {
    margin: 0 auto;
  }
}

@media (min-width: 768px) {
  .about-content-container .color-banner {
    height: 100vh;
  }

  .image-container {
    margin-right: 35px;
  }

  .about-container {
      margin: 0 25px;
  }
}

/* Publications Page */

.publications-content-container h1 {
  text-align: left;
  font-weight: 400;
}

.publications-content {
  padding: 20px 50px 50px 0;
  padding-top: 20px;
  padding-left: 50px;
  background: #fafafa;
}

.publications-entries {
  width: auto;
}

.publications-entries .head {
  background: #cccccc;
}


.entry-container {
  display: flex;
  justify-content: space-between;
  flex-wrap: nowrap;
  color: #777777;
  width: 100%;
  margin: 1rem 0;
}

.entry-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  z-index: 2;
}


.entry-container .title {
  color: #777777;
}

@media (max-width: 425px) {

  .publications-content {
    padding: 10px;
  }

  .publications-entries {
    width: 100%;
  }

  .year {
    z-index: 3;
  }
}

